Wrap header content in a div with a fixed height.
Adjust page margins with media queries.

Change font style on takes, both reading and writing.

--- a/assets/stylesheets/components/_feed.scss
+++ b/assets/stylesheets/components/_feed.scss
@@ -14,7 +14,10 @@
   color: palette(feed, text);
   padding-top: 5px;
   padding-bottom: 5px;
-  margin: 2rem;
+  margin: 1rem;
+  @media #{$mq-medium} {
+    margin: 2rem;
+  }
 }
 .feed__card-title {
   @include heading3;
