--- a/assets/stylesheets/tools/_variables.scss
+++ b/assets/stylesheets/tools/_variables.scss
@@ -1,1 +1,2 @@
 $page-margin: 3rem;
+$page-margin-mobile: 0.8rem;
